--- a/settings.gradle
+++ b/settings.gradle
@@ -32,3 +32,5 @@ include 'project:sprint_3:task_27'
 include 'project:sprint_3:task_28'
 include 'project:sprint_3:task_29'
 include 'project:sprint_3:task_30'
+include 'project:sprint_3:task_31'
+include 'project:sprint_3:task_32'
